--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
   font-family: Roboto, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
 
   letter-spacing: 0.03em;
   font-size: 14px;
@@ -37,10 +37,21 @@ footer {
 }
 
 .title {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.42;
-  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.67;
+
+  color: var(--primary-text-color);
+
+  text-align: center;
+}
+
+.subtitle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+
+  /*text-align: center;*/
 
   color: var(--primary-text-color);
 }
@@ -49,12 +60,10 @@ footer {
 
 .logo {
   font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   color: #000000;
-  letter-spacing: 0.03em;
 }
 
 .logo.part {
@@ -70,7 +79,7 @@ footer {
 .site-nav.link {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.33;
+  line-height: 1.14;
   letter-spacing: 0.02em;
 
   color: var(--primary-text-color);
@@ -89,6 +98,11 @@ footer {
 
 .contact {
   color: var(--title-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 /*Studio*/
@@ -113,7 +127,7 @@ footer {
   border-radius: 4px;
 
   color: var(--primary-white-color);
-  font-weight: bold;
+  font-weight: 700;
   letter-spacing: 0.06em;
   font-size: 16px;
   line-height: 1.87;
@@ -121,37 +135,39 @@ footer {
   cursor: pointer;
 }
 
-.section.title {
-  font-size: 36px;
-  line-height: 1.67;
+.subtitle.advantage {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
 }
 
 .section.ourteam {
   background-color: #f5f4fa;
 }
 
-.ourteam {
+.ourteam.text {
   font-size: 16px;
   line-height: 1.18;
 }
-
-.title.ourteam {
-  font-weight: 500;
-}
-
-.text.ourteam {
-  font-weight: normal;
-}
-
-/*footer .contact {
-  color: rgba(255, 255, 255, 0.6);
-}*/
 
 address {
   font-style: normal;
 }
 
-.address {
+.footer.contact {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+}
+
+.footer.contact:hover,
+.footer.contact:focus {
+  color: var(--accent-color);
+}
+
+.address-map {
   color: var(--primary-white-color);
 }
 
@@ -191,14 +207,15 @@ address {
   color: var(--primary-white-color);
 }
 
-.portfolio-list.title {
-  color: var(--primary-text-color);
-  font-weight: bold;
+.portfolio.subtitle {
+  font-weight: 700;
   font-size: 18px;
   line-height: 2;
+
+  letter-spacing: 0.06em;
 }
 
-.portfolio-list.text {
+.portfolio.text {
   font-size: 16px;
   line-height: 1.87;
 }
